--- a/style/index.css
+++ b/style/index.css
@@ -8,7 +8,6 @@ body {
   margin: 0 auto;
 }
 
-
 .header {
   display: flex;
   flex-direction: column;
@@ -18,10 +17,9 @@ body {
 .header h1 {
   margin-left: 40px;
 }
-@media (max-width: 600px) {
-  .containerClamp {
-   max-width: 500px ;
-  }
+@media (max-width: 600px) .containerClamp {
+  max-width: 500px;
+}
 
 .menu ul li {
   display: inline-block;
